[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Helmling", email = "michaelhelmling@posteo.de"},
]
dependencies = [
    "pandas",
    "matplotlib",
    "requests",
    "fastapi>=0.85.1",
    "uvicorn>=0.18.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.scripts]
web = "uvicorn pikoapi:app --reload --log-level warning"