[tool.poetry]
name = "piko-classic-api"
version = "0.1.0"
description = ""
authors = ["Michael Helmling <michaelhelmling@posteo.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"

prometheus-client = { version = "^0.17.1", optional = true }

[tool.poetry.extras]
prometheus = ["prometheus-client"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'piko_classic_api.cli:cli'